--- a/PYTHON/ToxicityClustering.ipynb
+++ b/PYTHON/ToxicityClustering.ipynb
@@ -113,7 +113,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "toxicity\n"
+      "toxicity\n",
+      "['Mandible_tsimdoses', 'Soft_Palate_tsimdoses']\n",
+      "4.358258332115561e-06\n",
+      "\n",
+      "['Mandible_tsimdoses', 'Soft_Palate_tsimdoses', 'Supraglottic_Larynx_tumor_distances']\n",
+      "1.1195306930389393e-06\n",
+      "\n"
      ]
     }
    ],
