--- a/PYTHON/ToxicityClassification.ipynb
+++ b/PYTHON/ToxicityClassification.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
     "                  ]\n",
     "\n",
     "cluster_root= 'data/clustering_results/'\n",
-    "feature_file_names = ['spatial_features_5clusters_l2weigthed_6features']\n",
+    "feature_file_names = ['kmeans4_3features']\n",
     "#llop through all files of feature extracted from toxicity clustering\n",
     "all_results = []\n",
     "additional_features = None\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -317,21 +317,21 @@
       "toxicity\n",
       "0.7402551381998583\n",
       "\n",
-      "spatial_features_5clusters_l2weigthed_6features\n",
+      "kmeans4_3features\n",
       "feeding_tubes\n",
-      "0.7798774259448417\n",
+      "0.7779622063329928\n",
       "aspiration\n",
-      "0.7724629252689735\n",
+      "0.8130270427449839\n",
       "toxicity\n",
-      "0.8058114812189936\n",
+      "0.8195428773919206\n",
       "\n",
-      "spatial_features_5clusters_l2weigthed_6features+baseline\n",
+      "kmeans4_3features+baseline\n",
       "feeding_tubes\n",
-      "0.7948161389172624\n",
+      "0.7925178753830439\n",
       "aspiration\n",
-      "0.8226228554812445\n",
+      "0.8471939517301541\n",
       "toxicity\n",
-      "0.825301204819277\n",
+      "0.8327427356484762\n",
       "\n"
      ]
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
       "0.6031183557760453\n",
       "\n",
       "\n",
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/spatial_features_5clusters_l2weigthed_6features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/kmeans4_3features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -398,20 +398,20 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.7099080694586313\n",
+      "0.7096527068437182\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.7362605408548997\n",
+      "0.7682465833091014\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7374202693125441\n",
+      "0.7599220411055987\n",
       "\n",
       "\n",
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/spatial_features_5clusters_l2weigthed_6features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/kmeans4_3features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -420,17 +420,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6641981613891726\n",
+      "0.6412155260469867\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.6420471067170689\n",
+      "0.7036929339924395\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.700921332388377\n",
+      "0.7381289865343728\n",
       "\n",
       "\n"
      ]
@@ -453,14 +453,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/spatial_features_5clusters_l2weigthed_6features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': []}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/kmeans4_3features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': []}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -482,7 +482,7 @@
       "0.7888022678951098\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/spatial_features_5clusters_l2weigthed_6features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/kmeans4_3features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -526,7 +526,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/spatial_features_5clusters_l2weigthed_6features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/kmeans4_3features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['manhattan_k=4', 'cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -535,20 +535,20 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6828396322778345\n",
+      "0.6800306435137896\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8365804012794418\n",
+      "0.848502471648735\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8217576187101346\n",
+      "0.8139617292700213\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/spatial_features_5clusters_l2weigthed_6features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/kmeans4_3features.csv', 'use_top_features': False, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -557,17 +557,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6902451481103167\n",
+      "0.6800306435137896\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8377435300959581\n",
+      "0.8519918580982844\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8284904323175054\n",
+      "0.817859673990078\n",
       "\n",
       "\n"
      ]
@@ -586,14 +586,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/spatial_features_5clusters_l2weigthed_6features.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': False, 'top_features': 'data/clustering_results/kmeans4_3features.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -602,20 +602,20 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.682073544433095\n",
+      "0.6943309499489274\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.7743530095958127\n",
+      "0.7234661238732188\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.7388377037562013\n",
+      "0.7501771793054571\n",
       "\n",
       "\n",
-      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/spatial_features_5clusters_l2weigthed_6features.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
+      "{'use_baseline_features': True, 'top_features': 'data/clustering_results/kmeans4_3features.csv', 'use_top_features': True, 'discrete_features': False, 'cluster_names': ['cluster_labels']}\n",
       "splits finished\n",
       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
       "                   intercept_scaling=1, l1_ratio=None, max_iter=8000,\n",
@@ -624,17 +624,17 @@
       "                   warm_start=False)\n",
       "None\n",
       "feeding_tube\n",
-      "0.6746680286006129\n",
+      "0.6764555669050051\n",
       "\n",
       "\n",
       "None\n",
       "aspiration\n",
-      "0.8313463216051178\n",
+      "0.8455946496074441\n",
       "\n",
       "\n",
       "None\n",
       "toxicity\n",
-      "0.8189227498228207\n",
+      "0.8128986534372784\n",
       "\n",
       "\n"
      ]
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
