fixed id reading issue for when its an int64 and applied the color-changing bugfix for the scatterplot and also probably more clustering analysis tweeks for what figures Im using

--- a/PYTHON/ToxicityClustering.ipynb
+++ b/PYTHON/ToxicityClustering.ipynb
@@ -275,6 +275,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error:  0.1650500289545297 %\n",
+      "using augmented similarities\n",
+      "successfully save patient data to  ../data/patient_dataset.json\n",
+      "successfully saved similarity score matrix to  data/scores.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "export(db, method = 'tsim')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
